@@ -78,9 +78,7 @@ PQXX_DECLARE_STRING_TRAITS_SPECIALIZATION(unsigned long long)
 
 PQXX_DECLARE_STRING_TRAITS_SPECIALIZATION(float)
 PQXX_DECLARE_STRING_TRAITS_SPECIALIZATION(double)
-#ifdef PQXX_HAVE_LONG_DOUBLE
 PQXX_DECLARE_STRING_TRAITS_SPECIALIZATION(long double)
-#endif
 
 #undef PQXX_DECLARE_STRING_TRAITS_SPECIALIZATION
 
